# learning

./: .gitignore  README.md
agents/: pyproject.toml  temp.ipynb
agents/chroma/: intro.ipynb
agents/langchain/: adv_rag.ipynb  basic_rag.ipynb  basic_rag.py
agents/langgraph/: 01_introduction.ipynb  02_state_and_memory.ipynb  03_editing_state_and_human_feedback.ipynb  04_building_assistant.ipynb  05_long_term_memory.ipynb  05a_long_term_memory.ipynb
agents/langgraph/studio/: agent.py  langgraph.json  router.py  simple.py
agents/mcp/: gradio_mcp.py  hello_world.py
agents/mcp/custom_workflow/: README.md
agents/mcp/custom_workflow/mcp_server/: server.py  test_server.py
agents/mcp/custom_workflow/templates/: bug.md  docs.md  feature.md  performance.md  refactor.md  security.md  test.md
agents/mcp/mcp_agent/: agent.json  agent.py
agents/mcp/mcp_sentiment/: README.md  app.py  mcp_client.py
dask/: introduction.ipynb
ds-and-algo/: merge-sort.py
dvc/: README.md  dvc-examples.ipynb
huggingface_llm/: 10_curating_datasets.ipynb  11_finetuning_llms.ipynb  12_reasoning_models.ipynb  1_transformer_models.ipynb  2_using_transformers.ipynb  3_fine_tuning.ipynb  4_huggingface_hub.ipynb  5_datasets.ipynb  6_tokenizers.ipynb  7a_NLP_tasks.ipynb  7b_NLP_task.ipynb  8_debugging.ipynb  README.md
imageGen/: diffusion.ipynb  vaes-gans.ipynb
kubernetes/: client.yml  deployment-manifest.yml  heroes.txt  network-policy.yml  persistent-volume.yml  pod-manifest.yml  pod-with-secrets.yaml  sercets.yaml
makemore/: 1_intro_to_language_models.ipynb  2_MLP.ipynb  3_activations_gradients_batchnorm.ipynb  4_backpropagation.ipynb  5_wavenet.ipynb  6_gpt_dev.ipynb  7_gpt_2_dev.ipynb
makemore/nano_gpt_2_src/: edu_fineweb10B.py  hellaswag.py  train_gpt2.py
makemore/nano_gpt_src/: bigram.py  bigram_with_attention_head.py  gpt.py
mlops-zoomcamp/: .gitignore  data_exploration.ipynb  model_exploration.ipynb
mlops-zoomcamp/01-introduction/: duration-prediction.ipynb
mlops-zoomcamp/02-experiment-tracking/: mlflow.ipynb  mlflow_ds_serve.ipynb
mlops-zoomcamp/03-ml-pipelines/: ml-pipeline.py
mlops-zoomcamp/04-deployment/: deployment-options.ipynb  duration-prediction.ipynb
mlops-zoomcamp/04-deployment/web-service/: Dockerfile  predict.py  pyproject.toml  test.py
mlops-zoomcamp/05-monitoring/: compose.yml  dummy_metrics_calculation.py  evidently_metrics_calculation.py  exploration.ipynb  requirements.txt
mlops-zoomcamp/06-best-practices/: .pre-commit-config.yaml  dummy_metrics_calculation.py  pyproject.toml
modern_pandas/: 1-effective-pandas.ipynb  2-effective_pandas.ipynb  data_sources.txt
nextjs/blog/: README.md  auth.ts  instrumentation-client.ts  next.config.ts  package-lock.json  (+3 more)
tailwindcss/: .pnp.cjs  app.js  globals.css  index.html  package.json
(+45 files in other folders)
