[project]
name = "06-best-practices"
version = "0.1.0"
description = ""
authors = [
    {name = "Minimartzz",email = "martin.ho.zy97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "poethepoet (>=0.40.0,<0.41.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poe.tasks]
lint = "ruff check . --fix"
black = "black ."
isort = "isort ."
check = ["lint", "black", "isort"]
pre-committed = "pre-commit run --all-files"
